@@ -1,3 +1,6 @@
+05/11/10 Julien Dutheil
+* In VectorTools: posmin -> whichMin, whichmax -> whichMax. Also recoded a bit more efficiently.
+
 27/10/10 Julien Dutheil
 * Added unit testing
 * [0000003] Fixed downhill simplex method! Did not work when initial point was 0!
